// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`polarAnchor renders 0 1`] = `
Array [
  .c0 {
  polar-anchor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: 0;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders function 1`] = `
Array [
  .c0 {
  polar-anchor: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: has;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: has;
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders invalid theme path 1`] = `
Array [
  .c0 {
  polar-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders negative number 1`] = `
Array [
  .c0 {
  polar-anchor: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    polar-anchor: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-anchor: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    polar-anchor: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-anchor: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-anchor: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    polar-anchor: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    polar-anchor: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    polar-anchor: July;
  }
}

@media April {
  .c0 {
    polar-anchor: August;
  }
}

@media January {
  .c0 {
    polar-anchor: September;
  }
}

@media April {
  .c0 {
    polar-anchor: November;
  }
}

@media June {
  .c0 {
    polar-anchor: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    polar-anchor: July;
  }
}

@media April {
  .c0 {
    polar-anchor: August;
  }
}

@media January {
  .c0 {
    polar-anchor: September;
  }
}

@media April {
  .c0 {
    polar-anchor: November;
  }
}

@media June {
  .c0 {
    polar-anchor: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-anchor: January;
  }
}

@media April {
  .c0 {
    polar-anchor: December;
  }
}

@media January {
  .c0 {
    polar-anchor: April;
  }
}

@media April {
  .c0 {
    polar-anchor: May;
  }
}

@media June {
  .c0 {
    polar-anchor: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    polar-anchor: January;
  }
}

@media April {
  .c0 {
    polar-anchor: December;
  }
}

@media January {
  .c0 {
    polar-anchor: April;
  }
}

@media April {
  .c0 {
    polar-anchor: May;
  }
}

@media June {
  .c0 {
    polar-anchor: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders postitive number 1`] = `
Array [
  .c0 {
  polar-anchor: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders string 1`] = `
Array [
  .c0 {
  polar-anchor: July;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: July;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: June;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: June;
}

<div
    className="c0"
  />,
]
`;

exports[`polarAnchor renders valid theme path 1`] = `
Array [
  .c0 {
  polar-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  polar-anchor: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
